[package]
name = "node"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local dependencies
blockprod = { path = "../blockprod/" }
common = { path = "../common/" }
chainstate = { path = "../chainstate" }
chainstate-launcher = { path = "../chainstate/launcher" }
logging = { path = "../logging/" }
mempool = { path = "../mempool/" }
p2p = { path = "../p2p/" }
rpc = { path = "../rpc/" }
subsystem = { path = "../subsystem/" }
storage-lmdb = { path = "../storage/lmdb" }

# External dependencies
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
jsonrpsee = { workspace = true, features = ["macros"] }
tokio = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
toml = "0.7"
directories = "4.0"
paste = "1.0"

[dev-dependencies]
crypto = { path = "../crypto" }

assert_cmd = "2"
tempfile = "3.3"
