[package]
name = "node"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockprod = { path = "../blockprod" }
chainstate = { path = "../chainstate" }
chainstate-launcher = { path = "../chainstate/launcher" }
common = { path = "../common" }
logging = { path = "../logging" }
mempool = { path = "../mempool" }
p2p = { path = "../p2p" }
rpc = { path = "../rpc" }
storage-lmdb = { path = "../storage/lmdb" }
subsystem = { path = "../subsystem" }
utils = { path = "../utils" }

anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
jsonrpsee = { workspace = true, features = ["macros"] }
tokio = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
toml = "0.7"
directories = "5.0"
paste = "1.0"
fs4 = "0.6"

[dev-dependencies]
crypto = { path = "../crypto" }

tempfile = "3.3"
