[package]
name = "orders-accounting"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
accounting = { path = "../accounting" }
common = { path = "../common" }
crypto = { path = "../crypto" }
logging = { path = "../logging" }
randomness = { path = "../randomness" }
serialization = { path = "../serialization" }
utils = { path = "../utils" }

parity-scale-codec.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
test-utils = { path = "../test-utils" }

rstest.workspace = true
