[package]
name = "p2p"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []

[dependencies]
chainstate = { path = "../chainstate" }
common = { path = "../common" }
logging = { path = "../logging" }
mempool = { path = "../mempool" }
networking = { path = "../networking" }
p2p-types = { path = "types" }
randomness = { path = "../randomness" }
rpc = { path = "../rpc" }
rpc-description = { path = "../rpc/description" }
serialization = { path = "../serialization" }
storage = { path = "../storage" }
storage-inmemory = { path = "../storage/inmemory" }
subsystem = { path = "../subsystem" }
utils = { path = "../utils" }
utils-networking = { path = "../utils/networking" }

async-trait.workspace = true
enum-iterator.workspace = true
derive_more.workspace = true
dyn-clone.workspace = true
futures.workspace = true
itertools.workspace = true
jsonrpsee = { workspace = true, features = ["macros"] }
lazy_static.workspace = true
num-derive.workspace = true
num-traits.workspace = true
once_cell.workspace = true
parity-scale-codec.workspace = true
serde.workspace = true
siphasher.workspace = true
thiserror.workspace = true
tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-stream.workspace = true
tokio-socks.workspace = true
tokio-util = { workspace = true, default-features = false, features = ["codec"] }
tracing.workspace = true

[dev-dependencies]
chainstate-storage = { path = "../chainstate/storage" }
chainstate-test-framework = { path = "../chainstate/test-framework" }
consensus = { path = "../consensus" }
p2p-backend-test-suite = { path = "backend-test-suite" }
p2p-test-utils = { path = "test-utils" }
test-utils = { path = "../test-utils" }
tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time", "test-util"] }

criterion.workspace = true
ctor.workspace = true
num.workspace = true
rstest.workspace = true

[[test]]
name = "backend_tcp"
harness = false

[[test]]
name = "backend_channels"
harness = false

[[test]]
name = "backend_noise"
harness = false

[[bench]]
name = "benches"
harness = false
