[package]
name = "pos-accounting"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accounting = { path = "../accounting" }
common = { path = "../common" }
crypto = { path = "../crypto" }
randomness = { path = "../randomness" }
serialization = { path = "../serialization" }
typename = { path = "../utils/typename" }
utils = { path = "../utils" }

thiserror.workspace = true
parity-scale-codec.workspace = true
variant_count.workspace = true

[dev-dependencies]
test-utils = { path = "../test-utils" }

rstest.workspace = true
